qt-codes-advantech/WRY-Fixed-Errors/Fix_DI_DIStatusChangeInterrupt-errors.txt
// FILE: Fix_DI_DIStatusChangeInterrupt-errors.txt
// DATE: Thu 04 May 2023 04:26:03 PM +08
// USING QT5 in QtCreator

DIGITAL INPUT DI_DIStatusChangeInterrupt FOR PCIE-1884 ADVANTECH CARD

=====================================================================
// ERROR NO 01
// INSIDE configuredialog.h  LINE 5
#include <bdaqctrl.h>
// #include "../../../inc/bdaqctrl.h"

// ERROR NO 02
// INSIDE distatuschaneinterrupt.h LINE 15
// CONSTRUCTOR
	// DIStatusChangeInterrupt(QWidget *parent = 0, Qt::WindowFlags flags = 0);
	   DIStatusChangeInterrupt(QWidget *parent = 0, Qt::WindowFlags flags = Qt::WindowFlags());

// ERROR NO 03
// INSIDE configuredialog.cpp LINE 110
        str.asprintf("Error:the error code is 0x%x\n\
                         The %s is busy or not exit in computer now.\n\
                         Select other device please!", errorCode, des.toUtf8().data());

     // str.sprintf("Error:the error code is 0x%x\n\
     //					 The %s is busy or not exit in computer now.\n\
     //                  Select other device please!", errorCode, des.toUtf8().data());

// ERROR NO 04
/home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIStatusChangeInterrupt/configuredialog.cpp:15: error: invalid use of incomplete type ‘class QButtonGroup’
../DI_DIStatusChangeInterrupt/configuredialog.cpp: In constructor ‘ConfigureDialog::ConfigureDialog(QWidget*)’:
../DI_DIStatusChangeInterrupt/configuredialog.cpp:15:40: error: invalid use of incomplete type ‘class QButtonGroup’
   15 |  this->buttonGroup0 = new QButtonGroup();
      |                                        ^
   
// SOLUTION FOR ERROR NO 04
// INSIDE configuredialog.cpp  LINE  8 - JUST ADD HEADER BELOW  

   #include <QButtonGroup>
   

REFERENCES:   
===================================================   
https://doc.qt.io/qt-6/qvboxlayout.html      
https://doc.qt.io/qt-5/qbuttongroup.html
https://doc.qt.io/qt-6/qbuttongroup.html#details

=====================================================================
SUCCESS COMPILATION

18:13:16: Running steps for project DI_DIStatusChangeInterrupt...
18:13:16: Configuration unchanged, skipping qmake step.
18:13:16: Starting: "/usr/bin/make" -j8
/usr/bin/make -f Makefile.Debug
make[1]: Entering directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-DI_DIStatusChangeInterrupt-Desktop-Debug'
make[1]: Nothing to be done for 'first'.
make[1]: Leaving directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-DI_DIStatusChangeInterrupt-Desktop-Debug'
18:13:16: The process "/usr/bin/make" exited normally.
18:13:16: Elapsed time: 00:00.

EXECUTION ON THE NOTEBOOK (NO DEVICE HAHAHA)

18:25:23: Starting /home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIStatusChangeInterrupt/../bin/debug/DI_DIStatusChangeInterrupt...
qt.core.qobject.connect: QObject::connect: No such signal QButtonGroup::buttonClicked(int) in ../DI_DIStatusChangeInterrupt/configuredialog.cpp:43
qt.core.qobject.connect: QObject::connect:  (receiver name: 'ConfigureDialog')
18:25:58: /home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIStatusChangeInterrupt/../bin/debug/DI_DIStatusChangeInterrupt exited with code 0


=====================================================================

=====================================================================
